rhai/codegen/ui_tests/export_mod_raw_noreturn.stderr
error: functions marked with 'return_raw' must return Result<T, Box<EvalAltResult>>
  --> $DIR/export_mod_raw_noreturn.rs:11:11
   |
11 | #[rhai_fn(return_raw)]
   |           ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> $DIR/export_mod_raw_noreturn.rs:22:5
   |
22 |     test_mod::test_fn(&mut n);
   |     ^^^^^^^^ use of undeclared crate or module `test_mod`
